--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,7 @@ m4_ifdef([AC_PROG_CC_C99], [AC_PROG_CC_C99],
 	 [AC_MSG_WARN([Attempt c99 workaround for old versions of autoconf])
 	  AC_PROG_CC
 	  AX_TRY_CFLAGS([-std=c99], [AX_CFLAGS([-std=c99])])])
+PKG_PROG_PKG_CONFIG([0.17])
 
 # Environment setup
 AC_CANONICAL_HOST
@@ -122,6 +123,35 @@ AS_IF([test "x$HAVE_PYTHON3" = "xyes"],
 
 AM_CONDITIONAL([PYTHON3], [test "x$HAVE_PYTHON3" = "xyes"])
 
+# Configure SSL/TLS
+AC_ARG_WITH([ssl],
+	    [AS_HELP_STRING([--with-ssl=@<:@cyassl/gnutls/no/openssl/polarssl/yes@:>@],
+			    [enable SSL/TLS support @<:@default=openssl@:>@])],
+	    [AS_CASE([$withval],
+		     [yes], [with_ssl=openssl],
+		     [*], [with_ssl=$withval])],
+	    [with_ssl=openssl])
+
+AS_IF([test "x$with_ssl" = "xcyassl"],
+      [PKG_CHECK_MODULES([SSL], [libcyassl],, [with_ssl=no])],
+      [test "x$with_ssl" = "xgnutls"],
+      [PKG_CHECK_MODULES([SSL], [gnutls],, [with_ssl=no])],
+      [test "x$with_ssl" = "xopenssl"],
+      [PKG_CHECK_MODULES([SSL], [openssl >= 1.0.1a],, [with_ssl=no])],
+      [test "x$with_ssl" = "xpolarssl"],
+      [AX_LIB_POLARSSL([SSL_CFLAGS=$POLARSSL_CFLAGS
+			SSL_LIBS=$POLARSSL_LIBS],
+		       [with_ssl=no])],
+      [test "x$with_ssl" = "xno"],,
+      [AC_MSG_ERROR([unknown SSL/TLS implementation: $with_ssl])])
+AM_CONDITIONAL([SSL_CYASSL], [test "x$with_ssl" = "xcyassl"])
+AM_CONDITIONAL([SSL_GNUTLS], [test "x$with_ssl" = "xgnutls"])
+AM_CONDITIONAL([SSL_OPENSSL], [test "x$with_ssl" = "xopenssl"])
+AM_CONDITIONAL([SSL_POLARSSL], [test "x$with_ssl" = "xpolarssl"])
+AM_CONDITIONAL([SSL], [test "x$with_ssl" != "xno"])
+AS_IF([test "x$with_ssl" != "xno"],
+      [AC_DEFINE([WITH_SSL], [1], [Define to 1 if SSL/TLS is enabled.])])
+
 # Configure AMQP command-line tools
 AC_ARG_ENABLE([tools],
 	      [AS_HELP_STRING([--enable-tools],
@@ -158,6 +188,7 @@ $PACKAGE_NAME build options:
 	Host: $host
 	Version: $VERSION
 	64-bit: $enable_64_bit
+	SSL/TLS: $with_ssl
 	Tools: $enable_tools
 	Documentation: $enable_docs
 ])
