Adding support for OpenSSL in multithreaded applications

--- a/librabbitmq/CMakeLists.txt
+++ b/librabbitmq/CMakeLists.txt
@@ -98,6 +98,10 @@ if (ENABLE_SSL_SUPPORT)
   else()
     message(FATAL_ERROR "Unknown SSL_ENGINE ${SSL_ENGINE}")
   endif()
+
+  if (ENABLE_THREAD_SAFETY)
+    add_definitions(-DENABLE_THREAD_SAFETY)
+  endif()
 endif()
 
 set(RABBITMQ_SOURCES
@@ -118,7 +122,7 @@ if (BUILD_SHARED_LIBS)
     add_library(rabbitmq SHARED ${RABBITMQ_SOURCES})
 
     if (ENABLE_SSL_SUPPORT)
-        target_link_libraries(rabbitmq ${AMQP_SSL_LIBS})
+        target_link_libraries(rabbitmq ${AMQP_SSL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
     endif()
 
     if (WIN32)
