Propose new socket API
The general idea is to have a non-instantiable socket base class.
Connection-specific sub-classes provide a constructor and methods for
modifying connection parameters. `amqp_socket_close()` is the
destructor.

Signed-off-by: Michael Steinert <mike.steinert@gmail.com>

--- a/librabbitmq/CMakeLists.txt
+++ b/librabbitmq/CMakeLists.txt
@@ -114,7 +114,7 @@ set(RABBITMQ_SOURCES
     ${CMAKE_CURRENT_BINARY_DIR}/amqp_framing.c
     amqp_api.c  amqp.h 
     amqp_connection.c  amqp_mem.c  amqp_private.h  amqp_socket.c  amqp_table.c
-    amqp_url.c
+    amqp_url.c amqp-socket.h amqp-tcp-socket.c amqp-tcp-socket.h
     ${SOCKET_IMPL}/socket.h ${SOCKET_IMPL}/socket.c
     ${AMQP_SSL_SRCS}
 )
