--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,7 @@ lib_LTLIBRARIES = librabbitmq/librabbitmq.la
 
 librabbitmq_librabbitmq_la_SOURCES = \
 	librabbitmq/amqp-socket.h \
-	librabbitmq/amqp-tcp-socket.c \
+	librabbitmq/amqp_tcp_socket.c \
 	librabbitmq/amqp_api.c \
 	librabbitmq/amqp_connection.c \
 	librabbitmq/amqp_framing.c \
@@ -17,19 +17,19 @@ librabbitmq_librabbitmq_la_SOURCES = \
 	librabbitmq/amqp_url.c
 
 if SSL_CYASSL
-librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp-cyassl.c
+librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp_cyassl.c
 endif
 
 if SSL_GNUTLS
-librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp-gnutls.c
+librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp_gnutls.c
 endif
 
 if SSL_OPENSSL
-librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp-openssl.c
+librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp_openssl.c
 endif
 
 if SSL_POLARSSL
-librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp-polarssl.c
+librabbitmq_librabbitmq_la_SOURCES += librabbitmq/amqp_polarssl.c
 endif
 
 librabbitmq_librabbitmq_la_CFLAGS = \
@@ -60,10 +60,10 @@ endif
 include_HEADERS = \
 	$(top_srcdir)/librabbitmq/amqp.h \
 	$(top_builddir)/librabbitmq/amqp_framing.h \
-	$(top_builddir)/librabbitmq/amqp-tcp-socket.h
+	$(top_builddir)/librabbitmq/amqp_tcp_socket.h
 
 if SSL
-include_HEADERS += librabbitmq/amqp-ssl-socket.h
+include_HEADERS += librabbitmq/amqp_ssl_socket.h
 endif
 
 BUILT_SOURCES = \
